--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="lib/Wav.js"></script>
     <script type="text/javascript" src="lib/AudioGenerator.js"></script>
   </head>
-
+  
   <body>
     <h1>Generate Spectrogram or MFCC features from Audio files</h1>
     <p>Select the audio</p>
@@ -20,30 +20,22 @@
     <button id="mfcc_btn">Generate MFCC [not implemented yet]</button>
     <p style="width: 100%; white-space: pre-wrap; font-size: 24px; font-weight: 700;" id="spec_result_btn"></p>
     <p style="width: 100%; white-space: pre-wrap; font-size: 24px; font-weight: 700;" id="mfcc_result_btn"></p>
+    <script type="text/javascript" src="lib/ui.js"></script>
     <script>
-      const loading = document.querySelector('.loading');
-      const option1btn = document.querySelector('#opt1');
-      const option2btn = document.querySelector('#opt2');
-      const audioFileLabel = document.querySelector('span[xid="audioFile"]');
-      const screamAudioUrl = 'https://raw.githubusercontent.com/oampo/audiofile.js/master/example/audio/WilhelmScream.wav';
-      const exampleAudioUrl = 'data/example.wav';
-      option1btn.firstChild.textContent = exampleAudioUrl;
-      option2btn.firstChild.textContent = screamAudioUrl;
-      option1btn.onclick = (event) => audioFileLabel.textContent = event.target.firstChild.textContent; 
-      option2btn.onclick = (event) => audioFileLabel.textContent = event.target.firstChild.textContent; 
       
+      const _ui = ui();
       // load Python language
-      loading.style.display = 'block';
+      _ui.showLoading();
       languagePluginLoader.then(() => {
         console.warn('Python initialized');
-        let audioGen = new AudioGenerator(loading);
+        let audioGen = new AudioGenerator(_ui);
         let specBtn = document.querySelector('#spec_btn');
         let mfccBtn = document.querySelector('#mfcc_btn');
         let specResultLabel = document.querySelector('#spec_result_btn');
         let mfccResultLabel = document.querySelector('#mfcc_result_btn');
         specBtn.onclick = function(evt) {
           let startTime = new Date().getTime();
-          audioGen.spectrogramFromFile(audioFileLabel.textContent, 10, 20).then((spectrogram) => {
+          audioGen.spectrogramFromFile(_ui.currentAudio(), 10, 20).then((spectrogram) => {
             let now = new Date().getTime();
             let elapsedTime = (now - startTime) / 1000;
             console.log(`Success!! Generated Spectrogram in ${elapsedTime} seconds`);
@@ -53,7 +45,7 @@
         mfccBtn.onclick = function(evt) {
           // TODO mfcc extraction
           let startTime = new Date().getTime();
-          audioGen.mfccFromFile(audioFileLabel.textContent).then((mfcc) => {
+          audioGen.mfccFromFile(_ui.currentAudio()).then((mfcc) => {
             let now = new Date().getTime();
             let elapsedTime = (now - startTime) / 1000;
             console.log(`Success!! Generated MFCC in ${elapsedTime} seconds`);
