--- a/www/index.html
+++ b/www/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
   <head>
     <link rel='stylesheet' href='style.css'>
+    <!-- Load TensorFlow.js -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.12.4"> </script>
     <!--Load the AJAX API-->
+    <script type="text/javascript" src="lib/dsp.js"></script>
     <script type="text/javascript" src="lib/pyodide.js"></script>
     <script type="text/javascript" src="lib/wavdecoder.js"></script>
     <script type="text/javascript" src="lib/Wav.js"></script>
+    <script type="text/javascript" src="lib/AudioClassification.js"></script>
     <script type="text/javascript" src="lib/AudioGenerator.js"></script>
-    <!-- Load TensorFlow.js -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.12.4"> </script>
+    <script type="text/javascript" src="lib/Graph.js"></script>
+    <script type="text/javascript" src="lib/NNetworks.js"></script>
   </head>
   
   <body>
@@ -24,7 +28,6 @@
     <p style="width: 100%; white-space: pre-wrap; font-size: 24px; font-weight: 700;" id="mfcc_result_btn"></p>
     <script type="text/javascript" src="lib/ui.js"></script>
     <script>
-      console.log(tf.loadFrozenModel);
       const TEXT2MEL_MODEL_URL = 'data/dctts_text2mel_model/tensorflowjs_model.pb';
       const TEXT2MEL_WEIGHTS_URL = 'data/dctts_text2mel_model/weights_manifest.json';
       const SSRN_MODEL_URL = 'data/dctts_ssrn_model/tensorflowjs_model.pb';
